<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_submit_problem"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/teal"
    tools:context="com.moon.shivam.agriculturehelpline.SubmitProblem">

    <TextView
        android:text="@string/syq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textSize="32dp"
        android:id="@+id/textView2" />

    <Button
        android:text="@string/sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="109dp"
        android:id="@+id/submit"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/name"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp"
        android:hint="@string/nam" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/query"
        android:hint="@string/q"
        android:layout_below="@+id/name"
        android:layout_alignParentStart="true"
        android:layout_marginTop="43dp" />
</RelativeLayout>
