<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_information"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/blur"
    tools:context="com.moon.shivam.agriculturehelpline.Information">

    <Button
        android:text="@string/soil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/soil"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/crops"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/crops"
        android:layout_above="@+id/pest"
        android:layout_alignStart="@+id/soil"
        android:layout_marginBottom="73dp" />

    <Button
        android:text="@string/fert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pest"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
