<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_helpline"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/blur"
    tools:context="com.moon.shivam.agriculturehelpline.Helpline">

    <Button
        android:text="@string/lc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lc"
        android:layout_marginBottom="73dp"
        android:layout_above="@+id/hc"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sp"
        android:layout_marginBottom="43dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/hc" />

    <Button
        android:text="@string/hc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hc"
        android:layout_marginBottom="96dp"
        android:layout_above="@+id/sp"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
