<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/teal">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_helpline_centres"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.moon.shivam.agriculturehelpline.HelplineCentres">

    <ImageButton
        android:text="@string/east"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/east"
        android:src="@drawable/east"
        android:scaleType="fitXY"
        android:background="#000000"
        android:layout_alignStart="@+id/north"
        android:layout_below="@+id/north" />

    <ImageButton
        android:text="@string/south"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/south"
        android:src="@drawable/south"
        android:scaleType="fitXY"
        android:background="#000000"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/east" />

    <ImageButton
        android:text="@string/west"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/west"
        android:src="@drawable/west"
        android:scaleType="fitXY"
        android:background="#000000"
        android:layout_alignStart="@+id/south"
        android:layout_below="@+id/south"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:text="@string/north"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/north"
        android:src="@drawable/north_india"
        android:scaleType="fitXY"
        android:background="#000000"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp" />

</RelativeLayout>

    </ScrollView>
