<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_soil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/teal"
    tools:context="com.moon.shivam.agriculturehelpline.Soil"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/ws"
        android:textSize="18sp"
        android:textStyle="bold" />


    <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="292dp"
            android:scrollbars="vertical"
            android:gravity="center_vertical"
            android:text="@string/sd" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center_vertical"
        android:text="@string/tp"
        android:textSize="18sp"
        android:textStyle="bold" />


    <ListView
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="219dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:gravity="center_vertical" />


</LinearLayout>

