<?xml version="1.0" encoding="utf-8"?>

<ScrollView

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#929090"

    tools:context="com.moon.shivam.agriculturehelpline.MainActivity">



    <ImageButton
        android:id="@+id/help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="false"
        android:elevation="0dp"
        android:scaleType="fitXY"
        android:background="#000000"
        android:src="@drawable/h"
        android:layout_below="@+id/info"
        android:text="@string/helpline"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/i"
        android:scaleType="fitXY"
        android:background="#000000"
        android:text="@string/information"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:id="@+id/livechat"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/help"
        android:scaleType="fitXY"
        android:src="@drawable/l" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:textColor="#ff0000"
        android:text="@string/information"
        android:textStyle="italic"
        android:textSize="45sp"
        android:layout_above="@+id/help"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="45sp"
        android:textColor="#ff0000"
        android:text="@string/helpline"
        android:layout_above="@+id/livechat"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginBottom="80dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lc"
        android:textSize="45sp"
        android:textColor="#ff0000"
        android:layout_marginTop="122dp"
        android:layout_below="@+id/help"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="29dp" />


</RelativeLayout>

</ScrollView>
